[project]
name = "dataforce.studio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic==1.17.1",
    "asyncpg==0.30.0",
    "cryptography==46.0.3",
    "ddtrace==3.18.1",
    "fastapi[all]==0.121.2",
    "httpx==0.27.2",
    "minio==7.2.18",
    "pyjwt==2.10.1",
    "sendgrid==6.11.0",
    "sqlalchemy[asyncio]==2.0.44",
    "uvicorn==0.38.0",
    "argon2-cffi==25.1.0",
]

[dependency-groups]
dev = [
    "mypy==1.18.2",
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
    "ruff==0.14.5",
    "types-passlib==1.7.7.20250602",
]

[tool.ruff]
# Target Python 3.14
target-version = "py314"

# Black-compatible settings
line-length = 88
indent-width = 4

src = ["dataforce_studio", "migrations", "tests", "utils"]

[tool.ruff.lint]
# Enable all rules for maximum coverage
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "C90", # mccabe complexity
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ANN", # flake8-annotations
]

ignore = [
    "ANN002",  # Missing type annotation for *args
    "ANN003",  # Missing type annotation for **kwargs
]

[tool.ruff.format]
# Black-compatible formatting settings
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
known-first-party = ["dataforce_studio"]
split-on-trailing-comma = true

[tool.mypy]
files = ["dataforce_studio", "utils", "tests"]
python_version = "3.14"
strict = true
