[project]
name = "luml-agent"
version = "0.2.0"
description = "Web UI for orchestrating coding agents in isolated Git worktrees"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.115.0",
    "sqlalchemy>=2.0.47",
    "typer>=0.15.0",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
luml-agent = "luml_agent.server:main"
mock-agent = "luml_agent.mock_agent:main"
luml-inspect = "luml_agent.cli.inspect:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/luml_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.workspace]
members = [
    "template/luml-autogen-model",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28.0",
    "ruff>=0.15.4",
    "mypy>=1.19.1",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "C90",  # mccabe complexity
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "ANN",  # flake8-annotations
]
ignore = [
    "ANN002",  # missing type annotation for *args
    "ANN003",  # missing type annotation for **kwargs
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
python_version = "3.11"
