[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "luml-satellite-sdk"
version = "0.1.0"
description = "SDK for building and managing LUML satellite workers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "LUML Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "cashews>=7.0.0",
    "typing_extensions>=4.0.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/luml-ai/luml"
Repository = "https://github.com/luml-ai/luml"

[tool.hatch.build.targets.wheel]
packages = ["src/luml_satellite_sdk"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
