[project]
name = "df-satellite"
version = "0.1.0"
description = "Dataforce Satellite Agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx==0.27.2",
    "aiodocker==0.24.0",
    "pydantic==2.12.4",
    "pydantic-settings==2.12.0",
    "fastapi==0.121.2",
    "uvicorn==0.38.0",
    "cashews==7.4.3",
]

[dependency-groups]
dev = [
    "ruff==0.14.5",
]

[tool.ruff]
target-version = "py313"
line-length = 100
indent-width = 4
src = ["agent"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "UP", "B", "ANN", "C4", "SIM", "TID252"
]
ignore = [
    "ANN002", # *args
    "ANN003", # **kwargs
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
known-first-party = ["agent"]
split-on-trailing-comma = true
