[project]
name = "df-satellite"
version = "0.1.0"
description = "Dataforce Satellite Agent"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx==0.27.2",
    "aiodocker==0.24.0",
    "pydantic==2.12.4",
    "pydantic-settings==2.14.2",
    "fastapi==0.121.2",
    "uvicorn==0.38.0",
    "cashews==7.4.3",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-sdk>=1.43.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.43.0",
]

[dependency-groups]
dev = [
    "ruff==0.14.5",
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "respx==0.22.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py314"
line-length = 100
indent-width = 4
src = ["agent"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "UP", "B", "ANN", "C4", "SIM", "TID252"
]
ignore = [
    "ANN101",
    "ANN002", # *args
    "ANN003", # **kwargs
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
known-first-party = ["agent"]
split-on-trailing-comma = true
