[project]
name = "df-model-server"
version = "0.1.0"
description = "Sample model server for satellite"
requires-python = ">=3.13"
dependencies = [
    "uvicorn==0.30.6",
    "httpx==0.27.2",
    "fnnx",
    "cloudpickle",
    "numpy",
    "onnxruntime",
    "pydantic",
]

[tool.ruff]
target-version = "py313"
line-length = 100
