[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "luml-deploy-satellite"
version = "0.1.0"
description = "LUML Deploy Satellite - Model deployment worker agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "LUML Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "luml-satellite-sdk",
    "aiodocker>=0.21.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/luml-ai/luml"
Repository = "https://github.com/luml-ai/luml"

[tool.hatch.build.targets.wheel]
packages = ["src/deploy_satellite"]

[tool.ruff]
line-length = 88
target-version = "py310"
# Exclude the runtime directory as it has its own pyproject.toml and lint rules
exclude = ["src/deploy_satellite/model_server/runtime"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
# Exclude the runtime directory as it has its own pyproject.toml
exclude = ["src/deploy_satellite/model_server/runtime"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.sources]
luml-satellite-sdk = { path = "../../luml-satellite-sdk", editable = true }
