[project]
name = "dataforce"
version = "0.1.0"
description = "DataForce Studio Python SDK"
readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    "pyfnx-utils>=0.0.1,<1.0.0",
]

[project.optional-dependencies]
api = [
    "httpx>=0.28.1,<1.0.0",
    "pydantic>=2.11.7,<3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dataforce"]



[dependency-groups]
dev = [
    "mypy==1.15.0",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "pytest-cov==6.0.0",
    "respx==0.22.0",
    "ruff==0.11.5",
    "types-passlib==1.7.7.20250408",
]
tracing = [
    "opentelemetry-api>=1.36.0",
    "opentelemetry-instrumentation-openai>=0.44.1",
    "opentelemetry-sdk>=1.36.0",
]

[tool.ruff]
# Target Python 3.12
target-version = "py312"

# Black-compatible settings
line-length = 88
indent-width = 4

src = ["dataforce"]

[tool.ruff.lint]
# Enable all rules for maximum coverage
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "C90", # mccabe complexity
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ANN", # flake8-annotations
]

ignore = [
    "ANN002",  # Missing type annotation for *args
    "ANN003",  # Missing type annotation for **kwargs
]

[tool.ruff.format]
# Black-compatible formatting settings
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
known-first-party = ["dataforce"]
split-on-trailing-comma = true
