[project]
name = "luml-mlflow"
version = "0.1.0"
description = "MLflow tracking store + artifact repository that lands MLflow runs in a luml orbit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlflow>=3.1,<4",
    "fnnx>=0.0.11",
    "luml-sdk>=0.2.0,<0.3.0",
    "luml-api>=0.2.0,<0.3.0",
    "typer>=0.15.0,<1.0.0",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.0",
    "pytest-cov>=7.1.0",
]

[project.scripts]
luml-mlflow = "luml_mlflow.cli:app"

[project.entry-points."mlflow.tracking_store"]
luml = "luml_mlflow.store:LumlTrackingStore"

[project.entry-points."mlflow.artifact_repository"]
luml = "luml_mlflow.artifact_repo:LumlArtifactRepository"

[project.entry-points."mlflow.model_registry_store"]
luml = "luml_mlflow.registry:LumlModelRegistryStore"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["luml_mlflow"]

[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4
src = ["luml_mlflow"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
# mlflow ships untyped public APIs; treat their dataclasses as Any rather than
# spraying `# type: ignore[no-untyped-call]` over every constructor call.
module = ["mlflow.*", "luml.*", "luml_api.*"]
follow_untyped_imports = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    # Benign warning from mlflow's entry-point discovery when something imports
    # `luml_mlflow.store` before mlflow finishes initializing; subsequent
    # `mlflow.set_tracking_uri("luml://...")` calls still resolve correctly.
    "ignore:Failure attempting to register store for scheme \"luml\":UserWarning",
    "ignore:Failure attempting to register artifact repository for scheme \"luml\":UserWarning",
]

[tool.uv.sources]
luml-sdk = { path = "../../../sdk/python/sdk", editable = true }
luml-api = { path = "../../../sdk/python/api", editable = true }
